# uw-capstone

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  superdense.txt  tasklist.txt
LAPACKTest/: CMakeLists.txt  main.cpp
OpenBLASTest/: CMakeLists.txt  main.cpp
OpenMPITest/: CMakeLists.txt
circuits/: circuit_qpe.txt
exercises/: IntegrationMethods.py  cpexercises3.py  cpexercises5.py  cpexercises6.py  cpexercises7.py  cpexercises8.py  cpexercises9.py  qho.py  qhoexp.py
fft/: CMakeLists.txt  SignalGenerator.py  fft_tests.py  main.cpp
fft/fftw-3.3.5-dll64/: fftw.sln  fftw.vcxproj.filters  libfftw3-3.lib
fftw-3.3.5-dll64/: fftw.vcxproj  libfftw3-3.exp  main.cpp
fftw-3.3.5-dll64/x64/Debug/: fftw.exe.recipe  fftw.ilk  fftw.vcxproj.FileListAbsolute.txt  vc143.idb
fftw-3.3.5-dll64/x64/Debug/fftw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  fftw.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
optests/: CMakeLists.txt  main.cpp
pdgemm_test/: CMakeLists.txt  DistributedMatrix.cpp  DistributedMatrix.h  DistributedMatrix.inl  main.cpp  pblas.h
qho/: CMakeLists.txt  main.cpp  spectral.py  wavepacket.py
qrfactor/: CMakeLists.txt  main.cpp
qrfactor/src/: CMakeLists.txt  main.cpp
quadrature/: CMakeLists.txt  main.cpp
quantum/: teleport.txt
quantum/circuits/: circuit_hypercube.txt  circuit_line.txt
quantum/src/: file.txt  line.py  qft.py  superdense.py
src/: hypercube.py  qft.py  qpe.py  teleportation.py
test/: CMakeLists.txt  main.cpp
utilities/: CMakeLists.txt  DistributedMatrix.cpp  DistributedMatrix.h  DistributedMatrix.inl  MatrixMath.h  MemoryArena.cpp  MemoryArena.h  OpHelpers.cpp  OpHelpers.h  Random.h  VectorMath.h  lapack.h  pblas.h
